--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -106,6 +106,7 @@
 		font-weight: 400;
 		color: $teal;
 		font-size: 22px;
+		letter-spacing: .02em;
 	}
 	
 	.partners-col p {
@@ -124,6 +125,10 @@
 		color: $red;
 		font-size: 12px;
 		font-weight: 900;
+		letter-spacing: .01em;
+		&:hover {
+			text-decoration: none;
+		}
 	}
 }
 
@@ -204,6 +209,7 @@
 		margin-top: 0;
 		font-weight: 400;
 		text-transform: capitalize;
+		letter-spacing: .02em;
 	}
 	p {
 		max-width: 1200px;
@@ -869,6 +875,7 @@ section#goals div.inner {
 		font-weight: 400;
 		text-transform: none;
 		text-align: center;
+		letter-spacing: .02em;
 		padding: 0 0 25px 0;
 		margin: 0 0 40px 0;
 		font-size: 36px;
@@ -896,6 +903,7 @@ section#goals div.inner {
 				font-size: 20px;
 				text-align: center;
 				margin: 20px 0 0 0;
+				letter-spacing: .04em;
 				&.number {
 					color: $red;
 					font-size: 100px;
@@ -903,6 +911,9 @@ section#goals div.inner {
 					text-align: center;
 					margin: 0;
 					line-height: 1;
+					font-weight: 800;
+					letter-spacing: .04em;
+					font-family: $title-font !important;
 				}
 			}
 			}
